--- a/pom.xml
+++ b/pom.xml
@@ -13,6 +13,8 @@
         <log4jVersion>2.14.1</log4jVersion>
         <commonsIoVersion>2.11.0</commonsIoVersion>
         <commonsVersion>3.12.0</commonsVersion>
+        <mysqlVersion>8.0.27</mysqlVersion>
+        <mybatisVersion>3.5.7</mybatisVersion>
     </properties>
 
     <dependencies>
@@ -39,7 +41,12 @@
         <dependency>
             <groupId>mysql</groupId>
             <artifactId>mysql-connector-java</artifactId>
-            <version>8.0.27</version>
+            <version>${mysqlVersion}</version>
+        </dependency>
+        <dependency>
+            <groupId>org.mybatis</groupId>
+            <artifactId>mybatis</artifactId>
+            <version>${mybatisVersion}</version>
         </dependency>
     </dependencies>
 
