Some work цÑwas done

--- a/src/main/resources/config.properties
+++ b/src/main/resources/config.properties
@@ -1,4 +1,4 @@
 driver = com.mysql.cj.jdbc.Driver
-URL = jdbc:mysql://localhost:3306/building_company
-user = root
+url = jdbc:mysql://localhost:3306/building_company
+username = root
 password = 1985
