--- a/pom.xml
+++ b/pom.xml
@@ -73,9 +73,8 @@
                 <artifactId>maven-surefire-plugin</artifactId>
                 <version>2.21.0</version>
                 <configuration>
-                    <suiteXmlFiles>
-                        <suiteXmlFile>testng.xml</suiteXmlFile>
-                    </suiteXmlFiles>
+                    <parallel>methods</parallel>
+                    <threadCount>5</threadCount>
                 </configuration>
             </plugin>
         </plugins>
